# python-polylith-example-hatch

./: LICENSE  README.md  pyproject.toml
bases/example/consumer/: core.py
bases/example/greet_aws_lambda/: core.py
bases/example/message_api/: core.py
components/example/kafka/: producer.py
components/example/message/: __init__.py
development/: david.py
projects/consumer_project/: pyproject.toml
projects/message_fastapi_project/: Dockerfile  README.md  pyproject.toml
projects/my_aws_lambda_project/: pyproject.toml
projects/my_fastapi_project/: pyproject.toml
projects/my_gcp_function_project/: Makefile  pyproject.toml
