[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-polylith-example-with-hatch"
version = "0.1.0"
description = 'A Python Polylith example code repo'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "David Vujic" }]
dependencies = [
  "fastapi~=0.106.0",
  "uvicorn~=0.25.0",
  "functions-framework~=3.5.0",
  "sqlalchemy~=2.0.23",
  "confluent-kafka~=2.3.0",
  "black~=23.12.1",
  "isort~=5.13.2",
  "mypy~=1.8.0",
  "pytest~=7.4.3",
]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
python = "3.12"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.isort]
profile = "black"
