[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "my_aws_lambda_project"
version = "1.1.1"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.8"

dependencies = []

[tool.polylith.bricks]
"../../bases/example/greet_aws_lambda" = "example/greet_aws_lambda"
"../../components/example/greeting" = "example/greeting"
"../../components/example/log" = "example/log"
