[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_fastapi_project"
version = "0.0.1"
description = 'A Python Polylith example code repo'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "David Vujic" }]
dependencies = [
  "fastapi~=0.106.0",
  "uvicorn~=0.25.0",
]

[tool.hatch.build.force-include]
"../../bases/example/greet_api" = "example/greet_api"
"../../components/example/greeting" = "example/greeting"
"../../components/example/log" = "example/log"
